k8s-manifests/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: client-image
        image: sravyasambaturu/mean-stack-app:client
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service 
metadata:
  name: frontend-service
  labels:
    app: frontend 
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports: 
    - port: 8080
      targetPort: 8080
