k8s-manifests/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: server-image
        image: sravyasambaturu/mean-stack-app:server
        ports:
        - containerPort: 5200
        imagePullPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: backend-service 
  labels:
    app: backend  
spec:
  type: LoadBalancer
  selector:
    app: backend
  ports:
    - port: 5200
      targetPort: 5200
